--- a/.github/workflows/pytest-in-sl7.yaml
+++ b/.github/workflows/pytest-in-sl7.yaml
@@ -14,6 +14,7 @@ jobs:
   pytest:
     runs-on: ubuntu-latest
     name: A job to test the decision engine framework on EL7
+    timeout-minutes: 30
 
     steps:
       - name: checkout code tree
