--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,7 +121,7 @@ jobs:
 
       - name: Install sphinx expected fonts within the container
         run: |
-          sudo apt-get update
+          sudo apt-get update || true
           sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
           sudo pip install -U pip
           sudo pip3 install sphinx
