--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,18 +22,15 @@ jobs:
         python-version: '3.9'
         architecture: 'x64'
 
-    - name: Merge requirements files into one
-      run: cat requirements/*.txt | sort -u | grep -v requirements-runtime.txt > requirements.txt
-
     - name: Cache pip
       uses: actions/cache@v2
       with:
         # This path is specific to Ubuntu
         path: ~/.cache/pip
-        # Look to see if there is a cache hit for the corresponding requirements file
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}-3.9
+        # Look to see if there is a cache hit for the corresponding file
+        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}-3.9
         restore-keys: |
-          ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}-
+          ${{ runner.os }}-pip-${{ hashFiles('setup.py') }}-
           ${{ runner.os }}-pip-
           ${{ runner.os }}-
 
@@ -57,7 +54,9 @@ jobs:
         sudo python3 -m pip install sphinx
 
     - name: Install required modules for AST to parse the codebase
-      run: python3 -m pip install -r requirements.txt
+      run: |
+        python3 -m pip install -e . --user
+        python3 -m pip install -e .[develop] --user
 
     - name: Setup safe/unique tmp dir for out of tree storage
       run: rm -rf /tmp/${{ github.sha }}
