Try to cleanup trivial missing coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ minversion = "6.0"
 addopts = "-l -v --durations=0"
 log_level = "debug"
 testpaths = "src/decisionengine"
+timeout = 120
 flake8-max-line-length = "120"
 flake8-ignore = "E501 E303 E302 E261 E265 W503 W504"
 flake8-show-source = "True"
