ExecStopPre is not supported on all systemd instances

--- a/package/systemd/decisionengine.service
+++ b/package/systemd/decisionengine.service
@@ -9,7 +9,7 @@ EnvironmentFile = -/etc/sysconfig/decisionengine
 User = decisionengine
 Group = decisionengine
 ExecStart = /usr/bin/decisionengine
-ExecStopPre =- /usr/bin/echo "Running /usr/bin/de-client --stop" >&2
+ExecStop = /usr/bin/echo "Running /usr/bin/de-client --stop" >&2
 ExecStop = /usr/bin/de-client --stop
 
 [Install]
