Don't do debug logs for flake8, they aren't helpful

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -189,7 +189,7 @@ jobs:
         env:
           PYTHONPATH: ${{ github.workspace }}/src
         run: |
-          pytest -m flake8 --flake8
+          pytest -m flake8 --flake8 --log-level=error
 
   run_pylint:
     name: Run pylint against code tree
