--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=51.2", "wheel", "setuptools_scm[toml]>=6.0.1"]
+requires = ["setuptools>=51.2", "wheel>=0.36.2", "setuptools_scm[toml]>=6.0.1"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
