Setup pre-commit

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -243,6 +243,22 @@ jobs:
         run: |
           pylint src/decisionengine/
 
+  pre-commit:
+    name: Validate our pre-commit hooks pass
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pre-commit
+          key: ${{ runner.os }}-pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pre-commit-
+            ${{ runner.os }}-
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+    - uses: pre-commit/action@v2.0.3
+
   rpmbuild_el7:
     name: Build an EL7 rpm
     runs-on: ubuntu-latest
