--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
   hooks:
     - id: check-ast
     - id: check-merge-conflict
+    - id: check-toml
     - id: check-yaml
     - id: end-of-file-fixer
     - id: fix-byte-order-marker
