Fix alignment issue

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@
   hooks:
     - id: check-ast
     - id: check-merge-conflict
+    - id: check-yaml
     - id: end-of-file-fixer
     - id: fix-byte-order-marker
     - id: mixed-line-ending
