--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@
 # For more information see
 #  https://pre-commit.com/index.html#install
 #  https://pre-commit.com/index.html#automatically-enabling-pre-commit-on-repositories
+repos:
 - repo: 'https://github.com/pre-commit/pre-commit-hooks'
   rev: v4.0.1
   hooks:
