--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
   rev: v4.0.1
   hooks:
     - id: check-ast
+    - id: check-toml
     - id: check-merge-conflict
     - id: check-yaml
     - id: end-of-file-fixer
