Initial SQLAlchemy Datasource

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ minversion = "6.0"
 addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers"
 log_level = "debug"
 testpaths = "src/decisionengine"
-required_plugins = "pytest-timeout>=1.4.2"
+required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
 timeout = 90
 flake8-max-line-length = "120"
 flake8-ignore = "E501 E303 E302 E261 E265 W503 W504"
