Start running tests with xdist
More parallel than 2 workers errors out, but 2 workers shows a good
speedup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ write_to = "src/decisionengine/framework/version.py"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers"
+addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers -n 2"
 log_level = "debug"
 testpaths = "src/decisionengine"
 required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
