Ignoring E203, whitespace after ':', since black is adding the whitespace
The issue is controversial and discussed in https://github.com/psf/black/issues/1859#issuecomment-739061362 https://github.com/psf/black/issues/311

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ testpaths = "src/decisionengine"
 required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
 timeout = 90
 flake8-max-line-length = "120"
-flake8-ignore = "E501 E303 E302 E261 E265 W503 W504"
+flake8-ignore = "E501 E303 E302 E261 E265 E203 W503 W504"
 flake8-show-source = "True"
 flake8-statistics = "True"
 
