--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ write_to = "src/decisionengine/framework/version.py"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
+# -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
 addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals -n 2"
 log_level = "debug"
 testpaths = "src/decisionengine"
