--- a/src/decisionengine/framework/config/tests/de/minimal.conf
+++ b/src/decisionengine/framework/config/tests/de/minimal.conf
@@ -3,6 +3,7 @@
     "log_file": "/tmp/de_config_tests/decision_engine_log",
     "max_file_size": 200 * 1000000,
     "max_backup_count": 6,
-    "log_level": "DEBUG"
+    "log_level": "DEBUG",
+    "start_q_logger": "False",
   }
 }
