Do the build of the wheel as not-root per our requirements

--- a/package/container/Dockerfile
+++ b/package/container/Dockerfile
@@ -46,9 +46,9 @@ RUN python3 -m pip install --upgrade --prefix=/usr pip ; \
 
 # Install decisionengine requirements (only)
 #  do as one layer to simplify merges
-RUN git clone https://github.com/HEPCloud/decisionengine.git /tmp/decisionengine.git ; \
+RUN su - adm -s /bin/bash -c "git clone https://github.com/HEPCloud/decisionengine.git /tmp/decisionengine.git"; \
     cd /tmp/decisionengine.git ; \
-    python3 setup.py bdist_wheel ; \
+    su adm -s /bin/bash -c "cd /tmp/decisionengine.git ; python3 setup.py bdist_wheel" ; \
     python3 -m pip install --prefix=/usr dist/*.whl ; \
     python3 -m pip install --prefix=/usr decisionengine[develop] ; \
     python3 -m pip uninstall -y decisionengine ; \
