Explicitly pass .coveragerc to pytest.
This may help us get our numbers back from the unexpected drop.

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,11 @@
 # .coveragerc to control coverage.py
+[paths]
+source = src
 
 [run]
 concurrency = multiprocessing
-branch = True
+parallel = true
+branch = true
 source = src
 omit = */tests/*
 
