--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -79,12 +79,13 @@ jobs:
         env:
           PYTEST_TIMEOUT: 90
           PYTHONPATH: ${{ github.workspace }}/src
+          COVERAGE_PROCESS_START: ${{ github.workspace }}/.coveragerc
         shell: 'script -q -e -c "bash --noprofile --norc -eo pipefail {0}"'
         run: |
           pytest --cov-report term --cov-report xml --cov=decisionengine --no-cov-on-fail
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
         with:
           flags: python-${{ matrix.python-version }}
 
