--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ write_to = "src/decisionengine/framework/version.py"
 [tool.pytest.ini_options]
 minversion = "6.0"
 # -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
-addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals -n 2"
+# pytest-xdist is not _mandatory_ for the tests to work, but it is recommended
+addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals -n 4"
 log_level = "debug"
 testpaths = "src/decisionengine"
 required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
