Fixup coverage for new version

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,7 +3,7 @@
 source = src
 
 [run]
-concurrency = multiprocessing
+concurrency = multiprocessing,thread
 parallel = true
 branch = true
 source = src
