--- a/.github/actions/python-command-in-el8-container/action.yaml
+++ b/.github/actions/python-command-in-el8-container/action.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 name: "Python Action"
-description: "Run python3 action in preconfigured SL7 container image"
+description: "Run python3 action in preconfigured EL8 container image"
 inputs:
   python-command:
     description: "What to run"
@@ -14,7 +14,7 @@ inputs:
     default: "pytest.log"
 runs:
   using: "docker"
-  image: "../../../package/ci/EL7/Dockerfile"
+  image: "../../../package/ci/EL8/Dockerfile"
   args:
     - ${{ inputs.python-command }}
     - ${{ inputs.logfile }}
