--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -193,6 +193,45 @@ jobs:
       - name: Archive rpm
         uses: actions/upload-artifact@v3
         with:
-          name: rpms-DE-${{steps.mkreftag1.outputs.reftag}}${{steps.mkreftag2.outputs.reftag}}-${{steps.mkdatetag.outputs.dtag}}
+          name: rpms-DE-EL7-${{steps.mkreftag1.outputs.reftag}}${{steps.mkreftag2.outputs.reftag}}-${{steps.mkdatetag.outputs.dtag}}
+          path: dist/*.rpm
+          if-no-files-found: error
+
+  rpmbuild_el8:
+    if: ${{ false }} # temporary disable this job
+    name: Build an EL8 rpm
+    runs-on: ubuntu-latest
+    needs: pytest
+    steps:
+      - name: make date tag
+        id: mkdatetag
+        run: echo "::set-output name=dtag::$(date +%Y%m%d_%H%M%S)"
+
+      - name: make ref tag case 1
+        id: mkreftag1
+        if: ${{ github.event.inputs.ref != '' }}
+        run: echo "::set-output name=reftag::${{github.event.inputs.ref}}"
+
+      - name: make ref tag case 2
+        id: mkreftag2
+        if: ${{ github.event.inputs.ref == '' }}
+        run: echo "::set-output name=reftag::${GITHUB_BASE_REF:+PR}"$(awk -F"/" '{print $3}' <<< ${GITHUB_REF})
+
+      - name: checkout code tree
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{github.event.inputs.ref}}
+
+      - name: Run the build in a container (EL8/HEPCloud-CI)
+        uses: ./.github/actions/python-command-in-el8-container
+        with:
+          python-command: "setup.py bdist_rpm"
+          logfile: "rpmbuild.log"
+
+      - name: Archive rpm
+        uses: actions/upload-artifact@v3
+        with:
+          name: rpms-DE-EL8-${{steps.mkreftag1.outputs.reftag}}${{steps.mkreftag2.outputs.reftag}}-${{steps.mkdatetag.outputs.dtag}}
           path: dist/*.rpm
           if-no-files-found: error
