--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,12 +21,13 @@ on:
 
 jobs:
   pytest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version:
           - "3.6"
-          - "3.10"
+          - "3.9"
+          - "3.11"
 
     name: Python ${{ matrix.python-version }} unit tests
     steps:
