--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,7 @@
 ---
+# SPDX-FileCopyrightText: 2023 Fermi Research Alliance, LLC
+# SPDX-License-Identifier: Apache-2.0
+
 # For more information see
 #  https://pre-commit.com/index.html#install
 #  https://pre-commit.com/index.html#automatically-enabling-pre-commit-on-repositories
@@ -36,7 +39,7 @@ repos:
     hooks:
       - id: black
   - repo: "https://github.com/pre-commit/mirrors-prettier"
-    rev: v2.6.2
+    rev: v2.7.1
     hooks:
       - id: prettier
         exclude_types:
