--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,11 @@ write_to = "src/decisionengine/framework/version.py"
 minversion = "6.0"
 # -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
 # pytest-xdist is not _mandatory_ for the tests to work, but it is recommended
-addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals -n 4"
+addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals"
 log_level = "debug"
 testpaths = "src/decisionengine"
 required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
 timeout = 90
-flake8-max-line-length = "120"
-flake8-ignore = "E501 E303 E302 E261 E265 E203 W503 W504"
-flake8-show-source = "True"
-flake8-statistics = "True"
 
 [tool.black]
 line-length = 120
