enable rpmbuild_el7, run_flake8 and pytest_el7 tests only on DE branch 1.7

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -160,6 +160,7 @@ jobs:
           make rst html latexpdf
 
   rpmbuild_el7:
+    if: ${{ github.ref == 'refs/heads/1.7' }}
     name: Build an EL7 rpm
     runs-on: ubuntu-latest
     needs: pytest
