--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -15,6 +15,7 @@ on:
       - 1.7
 jobs:
   pytest_el7:
+    if: ${{ github.ref == 'refs/heads/1.7' }}
     runs-on: ubuntu-latest
     name: A job to test the decision engine framework on EL7
     timeout-minutes: 30
