--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   run_flake8:
+    if: ${{ github.ref == 'refs/heads/1.7' }}
     name: Run pytest-flake8 against code tree
     runs-on: ubuntu-latest
     steps:
