--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -236,3 +236,42 @@ jobs:
           name: rpms-DE-EL8-${{steps.mkreftag1.outputs.reftag}}${{steps.mkreftag2.outputs.reftag}}-${{steps.mkdatetag.outputs.dtag}}
           path: dist/*.rpm
           if-no-files-found: error
+
+  depsrpmbuild_el9:
+    if: ${{ github.ref != 'refs/heads/1.7' }}
+    name: Build DE dependencies RPM for EL9
+    runs-on: ubuntu-latest
+  #  needs: pytest
+    steps:
+      - name: make date tag
+        id: mkdatetag
+        run: echo "::set-output name=dtag::$(date +%Y%m%d_%H%M%S)"
+
+      - name: make ref tag case 1
+        id: mkreftag1
+        if: ${{ github.event.inputs.ref != '' }}
+        run: echo "::set-output name=reftag::${{github.event.inputs.ref}}"
+
+      - name: make ref tag case 2
+        id: mkreftag2
+        if: ${{ github.event.inputs.ref == '' }}
+        run: echo "::set-output name=reftag::${GITHUB_BASE_REF:+PR}"$(awk -F"/" '{print $3}' <<< ${GITHUB_REF})
+
+      - name: checkout code tree
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: ${{github.event.inputs.ref}}
+
+      - name: Run the build in a container (EL9/HEPCloud-CI)
+        uses: ./.github/actions/rpmbuild-command-in-el9-container
+        with:
+          rpmbuild-options: '--build-in-place -bb package/rpm/decisionengine-deps.spec'
+          logfile: "depsrpmbuild.log"
+
+      - name: Archive rpm
+        uses: actions/upload-artifact@v3
+        with:
+          name: decisionengine-deps-EL9-${{steps.mkreftag1.outputs.reftag}}${{steps.mkreftag2.outputs.reftag}}-${{steps.mkdatetag.outputs.dtag}}
+          path: dist/noarch/*.rpm
+          if-no-files-found: error
