--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-name: Test in EL7/EL8 container
+name: Test in EL7/EL8/EL9 container
 
 on:
   push:
@@ -50,6 +50,28 @@ jobs:
 
       - name: Run the tests in a container (EL8/HEPCloud-CI)
         uses: ./.github/actions/python-command-in-el8-container
+
+      - name: Archive logs
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-log
+          path: pytest.log
+          if-no-files-found: error
+
+  pytest_el9:
+    if: ${{ github.ref != 'refs/heads/1.7' }}
+    runs-on: ubuntu-latest
+    name: A job to test the decision engine framework on EL9
+    timeout-minutes: 30
+
+    steps:
+      - name: checkout code tree
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Run the tests in a container (EL9/HEPCloud-CI)
+        uses: ./.github/actions/python-command-in-el9-container
 
       - name: Archive logs
         uses: actions/upload-artifact@v2
