Fix the bdist_wheel logname

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -189,7 +189,7 @@ jobs:
         uses: ./.github/actions/python-command-in-el9-container
         with:
           python-command: "setup.py bdist_wheel"
-          logfile: "rpmbuild.log"
+          logfile: "build_whl.log"
 
       - name: Archive whl
         uses: actions/upload-artifact@v3
