--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ minversion = "6.0"
 addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals"
 log_level = "debug"
 markers = [
-    "unit: tests that have no external dependencies"
+    "external: tests with external dependencies (e.g. Redis, Condor, etc.)",
+    "redis: tests that require a running Redis server as a dependency"
 ]
 testpaths = "src/decisionengine"
 required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
